--- a/produtos.html
+++ b/produtos.html
@@ -1,175 +1,162 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Produtos — PrimeZilla</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    /* ======== ESTILO DO INDEX ======== */
-    body {
-      background: #0a0a0a;
-      color: #fff;
-      font-family: "Inter", sans-serif;
-      margin: 0;
-      padding: 0;
-    }
+<style>
+/* ======== MESMO ESTILO DO INDEX (MODELO LIFEPOD) ======== */
 
-    .topo {
-      background: #111;
-      border-bottom: 1px solid #222;
-      padding: 12px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+body {
+  background: #0a0a0a;
+  color: #fff;
+  font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-    .logo {
-      height: 50px;
-    }
+/* TOPO */
+.topo {
+  background: #111;
+  border-bottom: 1px solid #222;
+  padding: 12px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  height: 50px;
+}
+.nav a {
+  color: #ccc;
+  margin-left: 20px;
+  text-decoration: none;
+  font-weight: 500;
+}
+.nav a:hover,
+.nav .ativo {
+  color: #00d4ff;
+}
 
-    .nav a {
-      color: #ccc;
-      margin-left: 20px;
-      text-decoration: none;
-      font-weight: 500;
-    }
+/* CONTAINER */
+.container {
+  padding: 20px;
+  max-width: 1100px;
+  margin: auto;
+}
+h2 {
+  font-size: 26px;
+  margin-bottom: 20px;
+}
 
-    .nav a:hover,
-    .nav .ativo {
-      color: #00d4ff;
-    }
+/* BOTÕES DE CATEGORIA */
+.cats {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.catBtn {
+  background: #111;
+  border: 1px solid #222;
+  padding: 8px 14px;
+  border-radius: 6px;
+  color: #ccc;
+  cursor: pointer;
+  transition: .2s;
+}
+.catBtn:hover,
+.ativo-cat {
+  border-color: #00d4ff;
+  color: #00d4ff;
+}
 
-    .container {
-      padding: 20px;
-      max-width: 1100px;
-      margin: auto;
-    }
+/* GRID */
+.grid {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+}
 
-    h2 {
-      font-size: 26px;
-      margin-bottom: 20px;
-    }
+/* CARD */
+.card {
+  background: #141414;
+  border-radius: 14px;
+  padding: 16px;
+  transition: .2s;
+  border: 1px solid #1f1f1f;
+}
+.card:hover {
+  transform: scale(1.02);
+  border-color: #00d4ff;
+}
+.card .media img {
+  width: 100%;
+  height: 230px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+.card .info h3 {
+  margin: 10px 0 6px;
+  font-size: 20px;
+}
+.price {
+  color: #00d4ff;
+  font-size: 18px;
+  font-weight: bold;
+}
 
-    /* Categorias */
-    .cats {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
-      flex-wrap: wrap;
-    }
+/* CONTROLES */
+.controls {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+label {
+  font-size: 14px;
+  color: #ddd;
+}
+select {
+  background: #0d0d0d;
+  border: 1px solid #333;
+  color: #fff;
+  padding: 8px;
+  border-radius: 6px;
+  margin-top: 4px;
+}
 
-    .catBtn {
-      background: #111;
-      border: 1px solid #333;
-      color: #ccc;
-      padding: 8px 16px;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: .2s;
-    }
+/* BOTÃO */
+.btnBuy {
+  background: linear-gradient(90deg, #00d4ff, #007ac1);
+  color: #000;
+  font-weight: bold;
+  padding: 12px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  transition: .2s;
+}
+.btnBuy:hover {
+  filter: brightness(1.2);
+}
 
-    .catBtn:hover,
-    .catBtn.ativo-cat {
-      background: #00d4ff;
-      border-color: #00d4ff;
-      color: #000;
-    }
-
-    /* Cards igual ao index */
-    .grid {
-      display: grid;
-      gap: 20px;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    }
-
-    .card {
-      background: #141414;
-      border-radius: 14px;
-      padding: 16px;
-      transition: .2s;
-      border: 1px solid #1f1f1f;
-    }
-
-    .card:hover {
-      transform: scale(1.02);
-      border-color: #00d4ff;
-    }
-
-    .media img {
-      width: 100%;
-      height: 230px;
-      object-fit: cover;
-      border-radius: 12px;
-    }
-
-    .info h3 {
-      margin: 10px 0 6px;
-      font-size: 20px;
-    }
-
-    .price {
-      color: #00d4ff;
-      font-size: 18px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
-    .controls {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    label {
-      font-size: 14px;
-      color: #ddd;
-      display: flex;
-      flex-direction: column;
-    }
-
-    select {
-      background: #0d0d0d;
-      border: 1px solid #333;
-      color: #fff;
-      padding: 8px;
-      border-radius: 6px;
-      margin-top: 4px;
-    }
-
-    .botao {
-      background: linear-gradient(90deg, #00d4ff, #007ac1);
-      color: #000;
-      font-weight: bold;
-      padding: 12px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      transition: .2s;
-    }
-
-    .botao:hover {
-      filter: brightness(1.2);
-    }
-
-    .footer {
-      text-align: center;
-      padding: 20px;
-      color: #777;
-      margin-top: 40px;
-      border-top: 1px solid #111;
-    }
-  </style>
+/* RODAPÉ */
+.footer {
+  text-align: center;
+  padding: 20px;
+  color: #777;
+  margin-top: 40px;
+  border-top: 1px solid #111;
+}
+</style>
 </head>
 
 <body>
-
 <header class="topo">
   <div class="brand">
-    <img src="https://res.cloudinary.com/duwsueept/image/upload/jq5bm4gwdwi3kpxgrago" class="logo">
+    <img src="https://res.cloudinary.com/duwsueept/image/upload/jq5bm4gwdwi3kpxgrago" class="logo" alt="PrimeZilla">
   </div>
-
   <nav class="nav">
     <a href="index.html">Início</a>
     <a href="produtos.html" class="ativo">Produtos</a>
@@ -179,7 +166,6 @@
 </header>
 
 <main class="container">
-
   <h2>Produtos</h2>
 
   <div class="cats">
@@ -191,7 +177,6 @@
   </div>
 
   <div id="productsGrid" class="grid">Carregando...</div>
-
 </main>
 
 <footer class="footer">
@@ -199,48 +184,41 @@
 </footer>
 
 <script>
-/* === SCRIPT ORIGINAL — SEM ALTERAR LÓGICA === */
 const PHONE = "5567992018672";
 
 function esc(s){
-  return String(s||'').replace(/[&<>"']/g, m =>
-    ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[m])
-  );
+  return String(s||'').replace(/[&<>"']/g, m => ({
+    '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'
+  }[m]));
 }
 
 const grid = document.getElementById('productsGrid');
-const catButtons = [...document.querySelectorAll('.catBtn')];
 let produtos = [];
 
 async function loadProdutos(){
-  grid.innerHTML = 'Carregando...';
-
+  grid.innerHTML = "Carregando...";
   try {
-    const res = await fetch('produtos.json?' + Date.now());
+    const res = await fetch("produtos.json?" + Date.now());
     produtos = await res.json();
-    render('all');
-  } catch(e){
-    console.error(e);
-    grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
+    render("all");
+  } catch {
+    grid.innerHTML = "<p>Erro ao carregar produtos.</p>";
   }
 }
 
-function render(filter){
+function render(cat){
   grid.innerHTML = "";
-
   produtos.forEach(p => {
     if(p.active === false) return;
-    if(filter !== "all" && String(p.category||"").toLowerCase() !== filter) return;
+    if(cat !== "all" && (p.category||"").toLowerCase() !== cat) return;
 
     const img = p.imageUrl || p.image || "placeholder.png";
-
-    const priceText = p.price !== undefined
-      ? `${p.currency || 'R$'} ${Number(p.price).toFixed(2)}`
-      : "Consultar valores";
+    const priceText = p.price !== undefined ?
+      `${p.currency||"R$"} ${Number(p.price).toFixed(2)}` :
+      "Consultar valores";
 
     const card = document.createElement("div");
     card.className = "card";
-
     card.innerHTML = `
       <div class="media"><img src="${esc(img)}"></div>
       <div class="info">
@@ -248,49 +226,43 @@ function render(filter){
         <p class="price">${esc(priceText)}</p>
         <div class="controls">
           <label>Quantidade
-            <select class="qty">
-              <option>1</option><option>2</option><option>3</option>
-            </select>
+            <select class="qty"><option>1</option><option>2</option><option>3</option></select>
           </label>
-          <label>${p.type === "pod" ? "Sabor" : "Cor"}
+          <label>${p.type==="pod" ? "Sabor" : "Cor"}
             <select class="variant">
-              ${(p.options || []).map(o => `<option>${esc(o)}</option>`).join("")}
+              ${(p.options||[]).map(o=>`<option>${esc(o)}</option>`).join("")}
             </select>
           </label>
           <label>Pagamento
-            <select class="pay">
-              <option>PIX</option><option>Dinheiro</option><option>Cartão</option>
-            </select>
+            <select class="pay"><option>PIX</option><option>Dinheiro</option><option>Cartão</option></select>
           </label>
-          <button class="botao btnBuy">Comprar no WhatsApp</button>
+          <button class="btnBuy">Comprar (WhatsApp)</button>
         </div>
       </div>
     `;
 
     card.querySelector(".btnBuy").addEventListener("click", () => {
       const qtd = card.querySelector(".qty").value;
-      const variant = card.querySelector(".variant").value;
+      const varTxt = card.querySelector(".variant").value;
       const pay = card.querySelector(".pay").value;
-      const label = p.type === "pod" ? "Sabor" : "Cor";
-
-      const message = encodeURIComponent(
-        `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${label}: ${variant}\nPagamento: ${pay}`
+      const label = (p.type==="pod") ? "Sabor" : "Cor";
+      const msg = encodeURIComponent(
+        `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${label}: ${varTxt}\nPagamento: ${pay}`
       );
-
-      window.open(`https://wa.me/${PHONE}?text=${message}`, "_blank");
+      window.open(`https://wa.me/${PHONE}?text=${msg}`);
     });
 
     grid.appendChild(card);
   });
 
-  if(!grid.children.length){
-    grid.innerHTML = "<p>Nenhum item nesta categoria.</p>";
+  if(grid.children.length === 0){
+    grid.innerHTML = "<p>Nenhum produto encontrado.</p>";
   }
 }
 
-catButtons.forEach(btn => {
+document.querySelectorAll(".catBtn").forEach(btn => {
   btn.addEventListener("click", () => {
-    catButtons.forEach(b => b.classList.remove("ativo-cat"));
+    document.querySelectorAll(".catBtn").forEach(b => b.classList.remove("ativo-cat"));
     btn.classList.add("ativo-cat");
     render(btn.dataset.cat);
   });
@@ -298,6 +270,5 @@ catButtons.forEach(btn => {
 
 loadProdutos();
 </script>
-
 </body>
 </html>
