--- a/produtos.html
+++ b/produtos.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Produtos — PrimeZilla</title>
-
   <link rel="stylesheet" href="style.css">
 
-  <style>
-/* ======== ESTILO ORIGINAL (mantido) ======== */
+<style>
+/* ======== MESMO ESTILO DO INDEX (MODELO LIFEPOD) ======== */
+
 body {
   background: #0a0a0a;
   color: #fff;
@@ -17,7 +17,7 @@ body {
   padding: 0;
 }
 
-/* ========= TOPO (MODIFICADO APENAS PARA FIXAR) ========= */
+/* TOPO */
 .topo {
   background: #111;
   border-bottom: 1px solid #222;
@@ -25,19 +25,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  /* FIXAR NO TOPO */
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 999;
 }
-
 .logo {
   height: 50px;
 }
-
 .nav a {
   color: #ccc;
   margin-left: 20px;
@@ -49,18 +40,12 @@ body {
   color: #00d4ff;
 }
 
-/* ======= CORREÇÃO: evitar conteúdo cortado ======= */
-body {
-  padding-top: 80px;  /* altura exata do topo */
-}
-
 /* CONTAINER */
 .container {
   padding: 20px;
   max-width: 1100px;
   margin: auto;
 }
-
 h2 {
   font-size: 26px;
   margin-bottom: 20px;
@@ -72,7 +57,6 @@ h2 {
   gap: 10px;
   margin-bottom: 20px;
 }
-
 .catBtn {
   background: #111;
   border: 1px solid #222;
@@ -82,7 +66,6 @@ h2 {
   cursor: pointer;
   transition: .2s;
 }
-
 .catBtn:hover,
 .ativo-cat {
   border-color: #00d4ff;
@@ -104,24 +87,20 @@ h2 {
   transition: .2s;
   border: 1px solid #1f1f1f;
 }
-
 .card:hover {
   transform: scale(1.02);
   border-color: #00d4ff;
 }
-
 .card .media img {
   width: 100%;
   height: 230px;
   border-radius: 12px;
   object-fit: cover;
 }
-
 .card .info h3 {
   margin: 10px 0 6px;
   font-size: 20px;
 }
-
 .price {
   color: #00d4ff;
   font-size: 18px;
@@ -134,12 +113,10 @@ h2 {
   flex-direction: column;
   gap: 10px;
 }
-
 label {
   font-size: 14px;
   color: #ddd;
 }
-
 select {
   background: #0d0d0d;
   border: 1px solid #333;
@@ -160,7 +137,6 @@ select {
   cursor: pointer;
   transition: .2s;
 }
-
 .btnBuy:hover {
   filter: brightness(1.2);
 }
@@ -173,16 +149,19 @@ select {
   margin-top: 40px;
   border-top: 1px solid #111;
 }
-  </style>
+</style>
 </head>
-<body>
 
-<!-- TOPO IDÊNTICO AO ORIGINAL, APENAS FIXADO -->
+<body>
 <header class="topo">
-  <img src="logo.png" class="logo">
+  <div class="brand">
+    <img src="https://res.cloudinary.com/duwsueept/image/upload/jq5bm4gwdwi3kpxgrago" class="logo" alt="PrimeZilla">
+  </div>
   <nav class="nav">
     <a href="index.html">Início</a>
     <a href="produtos.html" class="ativo">Produtos</a>
+    <a href="admin.html">Admin</a>
+    <a href="contato.html">Contato</a>
   </nav>
 </header>
 
@@ -205,8 +184,6 @@ select {
 </footer>
 
 <script>
-/* === SCRIPT ORIGINAL (não alterado) === */
-
 const PHONE = "5567992018672";
 
 function esc(s){
@@ -231,7 +208,6 @@ async function loadProdutos(){
 
 function render(cat){
   grid.innerHTML = "";
-
   produtos.forEach(p => {
     if(p.active === false) return;
     if(cat !== "all" && (p.category||"").toLowerCase() !== cat) return;
@@ -270,11 +246,9 @@ function render(cat){
       const varTxt = card.querySelector(".variant").value;
       const pay = card.querySelector(".pay").value;
       const label = (p.type==="pod") ? "Sabor" : "Cor";
-
       const msg = encodeURIComponent(
         `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${label}: ${varTxt}\nPagamento: ${pay}`
       );
-
       window.open(`https://wa.me/${PHONE}?text=${msg}`);
     });
 
@@ -296,9 +270,9 @@ document.querySelectorAll(".catBtn").forEach(btn => {
 
 loadProdutos();
 </script>
-
 </body>
 </html>
+
 
 
 </body>
