--- a/admin.html
+++ b/admin.html
@@ -6,51 +6,209 @@
   <title>Admin — PrimeZilla</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    .small{color:#9fb6c3;font-size:13px}
-    .wrap{max-width:980px;margin:18px auto;padding:12px}
-    #loginCard, #panel{background:linear-gradient(180deg,#071226,#041827);padding:18px;border-radius:12px;border:1px solid rgba(0,212,255,0.06)}
-    input, select {padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:#061427;color:#e6f7ff;width:100%;box-sizing:border-box}
-    .botao{background:linear-gradient(90deg,#00d4ff,#007ac1);color:#001826;padding:10px;border-radius:8px;border:none;cursor:pointer}
-    .muted{color:#9fb6c3}
-    .prod-row{display:flex;gap:8px;align-items:center;border:1px solid rgba(255,255,255,0.03);padding:8px;margin-bottom:8px}
-    .prod-row img{width:80px;height:80px;object-fit:cover;border-radius:6px}
-    .right{margin-left:auto}
-    .danger{background:#c0392b;color:white;border:none;padding:6px 8px;border-radius:6px;cursor:pointer}
+    /* ======== ESTILO PADRÃO PRIMEZILLA (MESMO DO INDEX) ======== */
+
+    :root{
+      --bg:#0a0f14;
+      --card:#071226;
+      --muted:#9fb6c3;
+      --accent:#00d4ff;
+      --accent-2:#007ac1;
+      --text:#e6f7ff;
+      --border:rgba(0,212,255,0.06);
+      --panel:#0f1720;
+    }
+
+    *{box-sizing:border-box}
+
+    body{
+      background: var(--bg);
+      color: var(--text);
+      font-family: "Inter", sans-serif;
+      margin:0;
+      -webkit-font-smoothing:antialiased;
+    }
+
+    /* WRAP */
+    .wrap {
+      max-width: 1100px;
+      margin: 30px auto;
+      padding: 20px;
+    }
+
+    /* TOPO VISUAL (caso queira usar no futuro) */
+    .topo {
+      background: #111;
+      border-bottom: 1px solid #222;
+      padding: 12px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .logo { height:44px; }
+
+    /* TÍTULOS */
+    h2, h3 {
+      color: var(--accent);
+      margin: 0 0 8px 0;
+    }
+
+    .small {
+      color: var(--muted);
+      font-size: 13px;
+    }
+
+    /* ======= CARDS (LOGIN E PAINEL) ======= */
+    #loginCard,
+    #panel {
+      background: #111;
+      border: 1px solid #1f1f1f;
+      border-radius: 14px;
+      padding: 20px;
+      box-shadow: 0 6px 18px rgba(0,212,255,0.03);
+      transition: .18s;
+    }
+
+    #loginCard:hover,
+    #panel:hover {
+      border-color: rgba(0,212,255,0.12);
+    }
+
+    /* LAYOUT FORM */
+    label {
+      display:block;
+      margin-top:10px;
+      color: var(--muted);
+      font-size: 14px;
+    }
+
+    input[type="text"],
+    input[type="password"],
+    input[type="file"],
+    select,
+    input {
+      width: 100%;
+      padding: 12px;
+      margin-top: 6px;
+      background: #0d0d0d;
+      border: 1px solid #222;
+      border-radius: 8px;
+      color: var(--text);
+      box-sizing: border-box;
+    }
+
+    input:focus, select:focus {
+      outline: none;
+      border-color: var(--accent);
+      box-shadow: 0 0 10px rgba(0,212,255,0.06);
+    }
+
+    /* BOTOES */
+    .botao {
+      display:inline-block;
+      background: linear-gradient(90deg, var(--accent), var(--accent-2));
+      color: #001826;
+      padding: 12px 14px;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      font-weight: 700;
+      transition: .12s;
+    }
+    .botao:hover { filter: brightness(1.06); }
+
+    .danger {
+      background: #c0392b;
+      color: #fff;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 700;
+    }
+    .danger:hover { filter: brightness(1.08); }
+
+    /* PRODUTOS LIST */
+    .prod-row {
+      display:flex;
+      gap:12px;
+      align-items:center;
+      background: #141414;
+      border-radius:12px;
+      padding:14px;
+      border:1px solid #1f1f1f;
+      margin-bottom:12px;
+      transition: .12s;
+    }
+    .prod-row:hover { transform: translateY(-4px); border-color: var(--accent); }
+    .prod-row img {
+      width:90px;
+      height:90px;
+      object-fit:cover;
+      border-radius:10px;
+      border:1px solid rgba(255,255,255,0.03);
+    }
+    .right { margin-left:auto; }
+
+    hr { border:0; border-bottom:1px solid #151515; margin:16px 0; }
+
+    /* small helpers kept from original */
+    .muted { color: var(--muted); }
+    .small-inline { font-size:13px; color:var(--muted); }
+
+    /* RESPONSIVO */
+    @media (max-width:700px){
+      .wrap{ padding:12px; margin:14px; }
+      .prod-row{ flex-direction: row; gap:10px; padding:10px }
+      .prod-row img{ width:72px; height:72px }
+      #loginCard, #panel{ padding:14px }
+      .botao{ width:100% }
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
     <h2 class="muted">Painel Admin — PrimeZilla</h2>
+
     <div id="loginCard">
       <h3 class="muted">Login</h3>
       <p class="small">Use as credenciais do admin</p>
+
       <label>Email (usuário)</label>
       <input id="loginUser" placeholder="email">
+
       <label>Senha</label>
       <input id="loginPass" type="password" placeholder="senha">
+
       <label>GitHub Personal Access Token (cole aqui)</label>
       <input id="githubToken" placeholder="token com permissão repo (ex: ghp_...)">
-      <div style="margin-top:10px;display:flex;gap:8px">
+
+      <div style="margin-top:12px;display:flex;gap:8px;flex-wrap:wrap">
         <button id="btnLogin" class="botao">Entrar</button>
       </div>
-      <p class="small" style="margin-top:8px">OBS: o token é usado somente para salvar/atualizar <code>produtos.json</code>.</p>
+
+      <p class="small" style="margin-top:10px">OBS: o token é usado somente para salvar/atualizar <code>produtos.json</code>.</p>
     </div>
 
-    <div id="panel" style="margin-top:14px;display:none">
-      <div style="display:flex;gap:12px;align-items:center">
+    <div id="panel" style="margin-top:18px;display:none">
+      <div style="display:flex;gap:12px;align-items:center;flex-wrap:wrap">
         <div><strong id="who"></strong></div>
-        <div style="margin-left:auto">
+        <div style="margin-left:auto;display:flex;gap:8px;flex-wrap:wrap">
           <button id="refreshList" class="botao">Recarregar lista</button>
-          <button id="logoutBtn" class="botao" style="background:#c0392b">Logout</button>
+          <button id="logoutBtn" class="botao" style="background:#c0392b;color:#fff">Logout</button>
         </div>
       </div>
-      <hr style="margin:12px 0">
+
+      <hr>
+
       <h3 class="muted">Adicionar produto</h3>
       <form id="addForm">
         <label>Nome</label>
         <input id="p_name" required>
+
         <label style="margin-top:8px">Preço</label>
         <input id="p_price" placeholder="39.90">
+
         <label style="margin-top:8px">Categoria</label>
         <select id="p_cat">
           <option value="pods">Pods</option>
@@ -58,19 +216,30 @@
           <option value="eletronicos">Eletrônicos</option>
           <option value="outros">Outros</option>
         </select>
+
         <label style="margin-top:8px">Tipo</label>
         <select id="p_type">
           <option value="pod">Pod (sabores)</option>
           <option value="non-pod">Não-pod (cores)</option>
         </select>
+
         <label style="margin-top:8px">Opções</label>
         <input id="p_opts" placeholder="Ex: Peach Mango, Menthol">
+
         <label style="margin-top:8px">Imagem</label>
         <input id="p_image" type="file" accept="image/*">
-        <label style="margin-top:8px"><input id="p_active" type="checkbox" checked> Ativo</label>
-        <div style="margin-top:10px"><button class="botao" id="publishBtn">Publicar produto</button></div>
+
+        <label style="margin-top:8px">
+          <input id="p_active" type="checkbox" checked> Ativo
+        </label>
+
+        <div style="margin-top:12px">
+          <button class="botao" id="publishBtn">Publicar produto</button>
+        </div>
       </form>
-      <hr style="margin:12px 0">
+
+      <hr>
+
       <h3 class="muted">Produtos cadastrados</h3>
       <div id="list"></div>
     </div>
@@ -80,19 +249,15 @@
 /* CONFIG */
 const ADMIN_USER = "admin@primezilla.com";
 const ADMIN_PASS = "PrimeZilla@2025";
-
 const CLOUD_NAME = "duwsueept";
 const UPLOAD_PRESET = "produtos_preset";
 const CLOUDINARY_API = `https://api.cloudinary.com/v1_1/${CLOUD_NAME}/upload`;
-
 const GITHUB_OWNER = "PrimeZillaBR";
 const GITHUB_REPO = "PrimeZillaBR.github.io";
 const PRODUTOS_PATH = "produtos.json";
 const GITHUB_API_BASE = `https://api.github.com/repos/${GITHUB_OWNER}/${GITHUB_REPO}/contents/${PRODUTOS_PATH}`;
-
 let GH_TOKEN = "";
 let currentUser = null;
-
 const el = id => document.getElementById(id);
 
 /* LOGIN */
@@ -100,7 +265,6 @@ el("btnLogin").addEventListener("click", () => {
   const u = el("loginUser").value.trim();
   const p = el("loginPass").value;
   const token = el("githubToken").value.trim();
-
   if (u === ADMIN_USER && p === ADMIN_PASS) {
     GH_TOKEN = token;
     currentUser = u;
@@ -112,7 +276,6 @@ el("btnLogin").addEventListener("click", () => {
     alert("Usuário ou senha incorretos");
   }
 });
-
 el("logoutBtn").addEventListener("click", () => location.reload());
 
 /* CLOUDINARY */
@@ -137,7 +300,6 @@ async function fetchProdutosFromGitHub() {
   try { list = JSON.parse(txt); } catch {}
   return { sha: j.sha, list };
 }
-
 async function saveProdutosToGitHub(list, sha) {
   const body = {
     message: "Atualização produtos via Admin",
@@ -161,14 +323,13 @@ function renderList(list) {
   const wrap = el("list");
   wrap.innerHTML = "";
   if (!list.length) return wrap.innerHTML = "<p class='small'>Nenhum produto cadastrado.</p>";
-
   list.forEach((p, idx) => {
     wrap.innerHTML += `
       <div class="prod-row">
-        <img src="${p.imageUrl || "placeholder.png"}">
+        <img src="${p.imageUrl || "placeholder.png"}" alt="${p.name}">
         <div>
           <strong>${p.name}</strong><br>
-          <span class="small">${p.category} • ${p.type} • ${p.price ? "R$ " + p.price.toFixed(2) : "Consultar"}</span>
+          <span class="small">${p.category} • ${p.type} • ${p.price ? "R$ " + Number(p.price).toFixed(2) : "Consultar"}</span>
         </div>
         <div class="right">
           <button class="danger" onclick="removeProduct(${idx})">Excluir</button>
@@ -176,14 +337,12 @@ function renderList(list) {
       </div>`;
   });
 }
-
 async function loadList() {
   const { sha, list } = await fetchProdutosFromGitHub();
   window.__sha = sha;
   window.__list = list;
   renderList(list);
 }
-
 async function removeProduct(i) {
   if (!confirm("Excluir produto?")) return;
   const { sha, list } = await fetchProdutosFromGitHub();
@@ -202,20 +361,15 @@ el("publishBtn").addEventListener("click", async (e) => {
   const options = el("p_opts").value.split(",").map(s => s.trim()).filter(Boolean);
   const file = el("p_image").files[0];
   const active = el("p_active").checked;
-
   if (!name) return alert("Preencha o nome!");
-
   el("publishBtn").disabled = true;
   el("publishBtn").textContent = "Publicando...";
-
   let imageUrl = file ? await uploadToCloudinary(file) : "";
-
   const product = {
     name, price, currency: "R$",
     category, type, options,
     imageUrl, active
   };
-
   const { sha, list } = await fetchProdutosFromGitHub();
   list.unshift(product);
   await saveProdutosToGitHub(list, sha);
@@ -225,9 +379,7 @@ el("publishBtn").addEventListener("click", async (e) => {
   el("publishBtn").disabled = false;
   el("publishBtn").textContent = "Publicar produto";
 });
-
 el("refreshList").addEventListener("click", loadList);
 </script>
-
 </body>
 </html>
